--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="./fontawesome/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,7 +33,6 @@
 
         <!-- logOut -->
         <section class="logOut">
-
             <nav class="navbar navbar-expand-lg navbar-dark group">
                 <div class="container">
                     <a class="navbar-brand" href="#">SMART LOGIN</a>
