--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Login</title>
     <!-- Font Awesome Icon -->
     <link rel="stylesheet" href="./fontawesome/css/all.min.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="./bootstrap-5.3.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
