--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- signIn -->
         <section class="signIn">
             <div class="container my-5 text-center ">
-                <div class="group m-auto w-75 p-5 shadow-lg p-3 mb-5">
+                <div class="group m-auto w-75 p-5 p-3 mb-5">
                     <h1>Smart Login System</h1>
 
                     <div  class="group_input">
@@ -28,7 +28,7 @@
                     <p id="incorrect"></p>
                 </div>
 
-                    <button onclick="login()" class="btn btn-outline-info w-100 my-3 p-2">Login<i class="fa-solid fa-right-to-bracket"></i></button>
+                    <button onclick="login()" class="btn btn-outline-info w-100 my-3 p-2">Login<i class="fa-solid fa-right-to-bracket mt-1"></i></button>
                     <p class="text-white">Don’t have an account? <a class="text-white" href="/signup">Sign Up</a></p>
                 </div>
             </div>
