--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 </div>
 
                     <button onclick="login()" class="btn btn-outline-info w-100 my-3 p-2">Login<i class="fa-solid fa-right-to-bracket mt-1"></i></button>
-                    <p class="text-white">Don’t have an account? <a class="text-white" href="/signup">Sign Up</a></p>
+                    <p class="text-white">Don’t have an account? <a class="text-white" href="signup.html">Sign Up</a></p>
                 </div>
             </div>
         </section>
         <!-- signIn -->
 
         <!-- Sign Up -->
-        <div class="container my-5 text-center">
+        <!-- <div class="container my-5 text-center">
             <div class="group m-auto w-75 p-5">
                 <h1>Smart Login System</h1>
                 <div  class="group_input">
@@ -49,11 +49,11 @@
                 <button onclick="signUp()" class="btn btn-outline-info w-100 my-3">Sign Up</button>
                 <p class="text-white">You have an account? <a class="text-white" href="/">Signin</a></p>
             </div>
-        </div>
+        </div> -->
         <!-- Sign Up -->
 
         <!-- logOut -->
-        <section class="logOut">
+        <!-- <section class="logOut">
             <nav class="navbar navbar-expand-lg navbar-dark group">
                 <div class="container">
                     <a class="navbar-brand" href="#">SMART LOGIN</a>
@@ -76,7 +76,7 @@
                     <h1 id="username"></h1>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- logOut -->
     </main>
 
