--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="./bootstrap-5.3.3/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <div class="container my-5 text-center">
@@ -27,6 +27,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
