add style to  welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -16,13 +16,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark group">
             <div class="container">
                 <a class="navbar-brand" href="#">SMART LOGIN</a>
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto">
+                <div class="navbar-collapses">
+                    <ul class="navbar-nav">
                         <li class="nav-item ">
                             <a class="nav-link btn btn-outline-warning " href="index.html" onclick="logout()">Logout<i class="fa-solid fa-right-from-bracket"></i></a>
                         </li>
