--- a/welcome.html
+++ b/welcome.html
@@ -19,7 +19,7 @@
                 <div class="navbar-collapses">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
-                            <a class="nav-link btn btn-outline-warning " href="index.html" onclick="logout()">Logout<i class="fa-solid fa-right-from-bracket"></i></a>
+                            <a class="nav-link btn btn-outline-warning " href="/" onclick="logout()">Logout<i class="fa-solid fa-right-from-bracket"></i></a>
                         </li>
                     </ul>
                 </div>
