handle welcome by anthor whau

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
             </div>
         </section>
         <!-- signIn -->
+
+        <section class="logOut d-none">
+            <nav class="navbar navbar-expand-lg navbar-dark group">
+                <div class="container">
+                    <a class="navbar-brand" href="#">SMART LOGIN</a>
+                    <div class="navbar-collapses">
+                        <ul class="navbar-nav">
+                            <li class="nav-item ">
+                                <a class="nav-link btn btn-outline-warning " href="/" onclick="logout()">Logout<i class="fa-solid fa-right-from-bracket"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div class="container my-5 text-center h-100 d-flex align-items-center">
+                <div class="group m-auto w-75 p-5">
+                    <h1 id="username"></h1>
+                </div>
+            </div>
+        </section>
     </main>
 
     
